# Rvcg

./: .Rbuildignore  .gitignore  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  README.md  Rvcg.Rproj  cleanup  config.status  configure  configure.ac  configure.win
R/: .#gaussDisplace.r  .Rhistory  Rvcg-package.R  meshInfo.r  normorient.r  rcpptest.r  smooth.r  threshold.r  vcgArea.r  vcgBallPivoting.r  vcgBary.r  vcgBorder.r  vcgClean.r  vcgClost.r  vcgClostKD.r  vcgCreateKD.r  vcgCurve.r  vcgDijkstra.r  vcgGetEdge.r  vcgHausdorff.r  vcgImport.r  vcgIntersect.r  vcgIsolated.r  vcgIsosurface.r  vcgIsotropicRemeshing.r  vcgKDtree.r  vcgKmeans.r  vcgMarchingCube.r  vcgMeshres.r  vcgMetro.r  vcgOneRingArea.r  vcgPlatonic.r  vcgPlyRead.r  vcgPlyWrite.r  vcgQEdecim.r  vcgRaySearch.r  vcgSample.r  vcgSmooth.r  vcgSubdivide.r  vcgUniformRemesh.r  (+6 more)
data/: dummyhead.rda  humface.rda
debian/: changelog  control
inst/: COPYRIGHT  COPYRIGHTS  NEWS.Rd
inst/include/vcglib/.svn/: entries
inst/include/vcglib/apps/.svn/: entries
inst/include/vcglib/docs/.svn/: entries
inst/include/vcglib/eigenlib/.svn/: entries
inst/include/vcglib/img/.svn/: entries
inst/include/vcglib/vcg/.svn/: entries
inst/include/vcglib/wrap/.svn/: entries
man/: Rvcg-deprecated.Rd  Rvcg-package.Rd  checkFaceOrientation.Rd  dummyhead.Rd  dummyhead.lm.Rd  dummyhead.mesh.Rd  humface.Rd  humface.lm.Rd  meshInfo.Rd  meshintegrity.Rd  nfaces.Rd  nverts.Rd  raysearchMulti.Rd  setRays.Rd  vcgArea.Rd  vcgBallPivoting.Rd  vcgBary.Rd  vcgBorder.Rd  vcgClean.Rd  vcgClost.Rd  vcgClostKD.Rd  vcgClostOnKDtreeFromBarycenters.Rd  vcgCreateKDtree.Rd  vcgCreateKDtreeFromBarycenters.Rd  vcgCurve.Rd  vcgDijkstra.Rd  vcgFaceNormals.Rd  vcgGeodesicPath.Rd  vcgGeodist.Rd  vcgGetEdge.Rd  vcgHausdorff.Rd  vcgImport.Rd  vcgIntersect.Rd  vcgIsolated.Rd  vcgIsosurface.Rd  vcgIsotropicRemeshing.Rd  vcgKDtree.Rd  vcgKmeans.Rd  vcgMeshres.Rd  vcgMetro.Rd  (+21 more)
src/: .RData  .Rhistory  Makevars  Makevars.in  Makevars.in.win  Makevars.win  ROneRing.cpp  RPly.cpp  RQEdecim.cpp  RVFadj.cpp  RallRead.cpp  Rarea.cpp  Rballpivot.cpp  Rborder.cpp  Rclean.cpp  Rclost.cpp  Rcurvature.cpp  Rdijkstra.cpp  Rexport.cpp  RgetEdge.cpp  Rhausdorff.cpp  Rintersect.cpp  Risolated.cpp  Risoremesh.cpp  Rkdtree.cpp  RkdtreeXptr.cpp  Rkmeans.cpp  Rmarch.cpp  Rmeshres.cpp  Rmeshvol.cpp  Rmetro.cpp  Rplatonic.cpp  Rsample.cpp  Rsmooth.cpp  Rsubdivision.cpp  Runiform_resample.cpp  RupdateNormals.cpp  RvcgIO.h  RvcgKD.h  RvcgXPTr.cpp  (+24 more)
src/vcglib/: compiler_fixes.patch  deprecated_patch  eigen.patch  hash_map.patch  kdtree.h_anon_struct.patch  longlong.patch  semicolon.patch  stdisnan.patch  stl_unused_var.patch  unordered_map.patch
src/vcglib/.pc/: applied-patches
src/vcglib/.svn/: all-wcprops  entries  wc.db
src/vcglib/apps/.svn/: entries
src/vcglib/apps/metro/.svn/: entries
src/vcglib/apps/pivoting/.svn/: entries
src/vcglib/apps/plyrefine/.svn/: entries
src/vcglib/apps/quadrangulator/.svn/: entries
src/vcglib/apps/sample/.svn/: entries
src/vcglib/apps/test/.svn/: entries
src/vcglib/apps/tridecimator/.svn/: entries
src/vcglib/apps/trimeshinfo/.svn/: entries
src/vcglib/apps/unsupported/.svn/: entries
src/vcglib/docs/.svn/: entries
src/vcglib/docs/Doxygen/.svn/: entries
src/vcglib/eigenlib/.svn/: all-wcprops  entries
src/vcglib/eigenlib/Eigen/.svn/: all-wcprops  entries
src/vcglib/eigenlib/unsupported/.svn/: all-wcprops  entries
src/vcglib/img/.svn/: all-wcprops  entries
src/vcglib/patches/: 00_eigen.patch  01_hash_map.patch  02_kdtree_anonstruct.patch  02_kdtree_anonstruct.patch~  03_longlong.patch  04_semicolon.patch  05_stdisnan.patch  06_stl_unused_var.patch  07_cout.patch  07_cout.patch~  08_depr_register.patch  09_marching_cubes_fix.patch  09_memleak_priorqueue_kd.patch  10_mc_trivial_walker_memleak.patch  11_include_time.h_point_sampling.h.patch  11_intersect_dangling_field.patch  12_include_time.h_point_sampling.h.patch  13_clean.h_void.patch  14_cstint-c++11.patch  15_stdisnan.patch  16_refine_loop_ubsan.patch  16_refine_loop_ubsan.patch~  17_fix_gcc_8_stl_export.patch  17_fix_gcc_8_stl_export.patch~  18_fix_warn_unused_result  19_fix_plylib_wstrict.patch  19_fix_plylib_wstrict.patch~  20_include_assert.patch  21_use_std_acos.patch  22_isotropic_remeshing_missing_result.patch  23_fprint_export_off.patch  23_fprint_export_off.patch~  23_fprintf_off.patch  24_import.obj.clang16.patch  25_remove.camera.patch  clang19-Template.patch  intersect_dangling_field.patch  series
src/vcglib/vcg/.svn/: all-wcprops  entries
src/vcglib/vcg/complex/: exception.h  used_types.h
src/vcglib/vcg/complex/.svn/: all-wcprops  entries
src/vcglib/vcg/complex/algorithms/: bitquad_creation.h  clean.h  clustering.h  curve_on_manifold.h  harmonic.h  harmonic.h.rej  implicit_smooth.h  implicit_smooth.h.rej  inertia.h  inertia.h.rej  isotropic_remeshing.h  point_sampling.h  point_sampling.h.rej  refine_loop.h  refine_loop.h.rej
src/vcglib/vcg/connectors/.svn/: all-wcprops  entries
src/vcglib/vcg/container/.svn/: all-wcprops  entries
src/vcglib/vcg/math/: base.h  eigen.h  eigen.h.rej  matrix44.h  matrix44.h.rej  polar_decomposition.h.rej  quadric.h.rej
src/vcglib/vcg/math/.svn/: all-wcprops  entries
src/vcglib/vcg/simplex/.svn/: all-wcprops  (+1 more)
src/vcglib/vcg/space/: fitting3.h  fitting3.h.rej  intersection3.h  point_matching.h.rej  tetra3.h  tetra3.h.rej
src/vcglib/wrap/.svn/: all-wcprops  entries
src/vcglib/wrap/gl/: gl_field.h
src/vcglib/wrap/glw/: framebuffer.h  type.h  utility.h
src/vcglib/wrap/io_trimesh/: export_idtf.h  export_stl.h  import_stl.h  import_stl.h.rej
src/vcglib/wrap/ply/: plylib.cpp
(+474 files in other folders)
